adjusted a spelling mistake Adjusted the spelling of strong in the <section class="quote"> <p class="person">

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         people will actually read it. Who knows?  All i knows
         is that it looks nice.
       </p>
-      <p class="person"><stong>-Thor, God of Thunder</stong></p>
+      <p class="person"><strong>-Thor, God of Thunder</strong></p>
     </section>
     <section class="action">
       <h4>Call to action! it's time!</h4>
