--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             main title.  It's a smaller font and the color is lower
             contrast
           </p>
-          <button>Sign up</button>
+          <button class="btn">Sign up</button>
         </div>
         <div class="hero-image">
           <img src="#" alt="Placeholder image">
@@ -75,10 +75,10 @@
       </section>
       
       <section class="quote">
-        <p>This is an inspiring quote, or a testimonial from a
+        <p><i>This is an inspiring quote, or a testimonial from a
           customer.  Maybe it's just filling up space, or Maybe
           people will actually read it. Who knows?  All i knows
-          is that it looks nice.
+          is that it looks nice.</i>
         </p>
         <p class="person"><strong>-Thor, God of Thunder</strong></p>
       </section>
@@ -86,7 +86,7 @@
       <section class="action">
         <h4>Call to action! it's time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <a href="#" class="button">Sign up</a>
       </section>
     </main>
       
