--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <section class="action">
         <h4>Call to action! it's time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
-        <a href="#" class="button">Sign up</a>
+        <button>Sign up</button>
       </section>
     </main>
       
