--- a/index.html
+++ b/index.html
@@ -20,20 +20,59 @@
     <main>
       <section class="hero">
         <div class="hero-text">
-          <h2 class="main-title">This website is awesome</h2>
-          <p class="subtext">This website has some subtext that goes here under the 
-            main title.  It's a smaller font and the color is lower
-            contrast
-          </p>
-          <button class="btn">Sign up</button>
+          <h2 class="main-title">Hi there, I'm Ben Collen</h2>
+          <h3 class="mini-title"><em>I am a trainee web developer</em></h3>
+          <p class="subtext">Some text about goes here.</p>
         </div>
         <div class="hero-image">
-          <img src="#" alt="Placeholder image">
+          <img src="./img/ben-collen.jpeg" alt="selie picture of Ben Collen" width="300px" height="200px">
         </div>
       </section>
       
       <section class="info">
-        <h3>Some random information.</h3>
+        <h3>Current Projects</h3>
+        <div class="info-content">
+          <div class="info-box">
+            <figure>
+              <img src="#" alt="insert image">
+              <figcaption>This is some subtext
+                under an illustration
+                or image
+              </figcaption>
+            </figure>
+          </div>
+          <div class="info-box">
+            <figure>
+              <img src="#" alt="insert image">
+              <figcaption>This is some subtext
+                under an illustration
+                or image
+              </figcaption>
+            </figure>
+          </div>
+          <div class="info-box">
+            <figure>
+              <img src="#" alt="insert image">
+              <figcaption>This is some subtext
+                under an illustration
+                or image
+              </figcaption>
+            </figure>
+          </div>
+          <div class="info-box">
+            <figure>
+              <img src="#" alt="insert image">
+              <figcaption>This is some subtext
+                under an illustration
+                or image
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="info">
+        <h3>Completed Projects</h3>
         <div class="info-content">
           <div class="info-box">
             <figure>
